noinst_LIBRARIES=libmytools.a
libmytools_a_SOURCES=thread_pool.c if.c event.c linklist.c log.c\
				 memory.c prefix.c table.c thread.c vector.c\
				 semph.c shmem.c
noinst_HEADERS=thread_pool.h if.h event.h linklist.h log.h\
			   memory.h prefix.h table.h thread.h vector.h\
			   semph.h shmem.h zebra.h
libmytools_a_CFLAGS=-I../
